--- a/Spring_Introduction/src/main/resources/application.properties
+++ b/Spring_Introduction/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=Spring_Introduction
+spring.datasource.url = jdbc:mysql://localhost:3306/springapp?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password = 1234
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.jpa.open-in-view=false
+spring.jpa.show-sql= true
