--- a/Spring_Introduction/src/main/resources/application.properties
+++ b/Spring_Introduction/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/springapp?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+#    Database Configuration
+#    Add  database name to datasource.url
+
+spring.datasource.url = jdbc:mysql://localhost:3306/springapp?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false 
 spring.datasource.username=root
 spring.datasource.password = 1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
