--- a/JWT/src/main/resources/application.properties
+++ b/JWT/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=JWT
+#    Database Configuration
+#    Add  database name to datasource.url
+
+spring.datasource.url = jdbc:mysql://localhost:3306/springapp?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false 
+spring.datasource.username=root
+spring.datasource.password = 1234
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.jpa.open-in-view=false
+spring.jpa.show-sql= true
+jwt.secret=e#s$p%o$r^t9
